MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/Handover_Details__c.object-meta.xml
<CustomObject>
    <label>Handover Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Handover Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handover Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>