MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/ADDC_Premise_Id__c.field-meta.xml
<CustomField>
    <fullName>ADDC_Premise_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADDC Premise Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>