MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Bank_Valuation_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Bank_Valuation_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Valuation Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Handover Details (Bank Valuation Appointment)</relationshipLabel>
    <relationshipName>Handover_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>