MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Bank_Valuation_Appointment_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Bank_Valuation_Appointment_End_Time__c</fullName>
    <formula>Bank_Valuation_Appointment__r.SchedEndTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Valuation Appointment End Time</label>
    <type>DateTime</type>
</CustomField>