MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Bank_Valuation_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Valuation_Appointment_Status__c</fullName>
    <formula>TEXT(Bank_Valuation_Appointment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Valuation Appointment Status</label>
    <type>Text</type>
</CustomField>