MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Bcc_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Bcc_Letter_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bcc Letter Sent Date</label>
    <type>Date</type>
</CustomField>