MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/BCC_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>BCC_Target_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BCC Target Date</label>
    <type>Date</type>
</CustomField>