MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipName>Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>