MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Community_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Community_Service_Charge__c</fullName>
    <label>Community Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>