MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Consultant_Approval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Approval_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>