MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Consultant_Approved_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Approved_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consultant Approved Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>