MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contractor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>