MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_Attended_Desnagging__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attended_Desnagging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Attended Desnagging</label>
    <type>Checkbox</type>
</CustomField>