MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_de_sang_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_de_sang_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer de sang date</label>
    <type>Date</type>
</CustomField>