MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_Desnagging_Report__c.field-meta.xml
<CustomField>
    <fullName>Customer_Desnagging_Report__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Desnagging Report</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>