MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_snag_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_snag_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer snag date</label>
    <type>Date</type>
</CustomField>