MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_Snag_Executive__c.field-meta.xml
<CustomField>
    <fullName>Customer_Snag_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Snag Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Handover_Details3</relationshipName>
    <type>Lookup</type>
</CustomField>