MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_Snag_Rectify_Days__c.field-meta.xml
<CustomField>
    <fullName>Customer_Snag_Rectify_Days__c</fullName>
    <label>Customer Snag Rectify Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>