MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_Snagging_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Snagging_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Snagging Letter Sent</label>
    <type>Checkbox</type>
</CustomField>