MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Customer_Utility_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Utility_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Utility Date</label>
    <type>Date</type>
</CustomField>