MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/De_Snagging_Appointment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>De_Snagging_Appointment_Start_Time__c</fullName>
    <formula>De_Snagging_Appointment__r.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>De-Snagging Appointment Start Time</label>
    <type>DateTime</type>
</CustomField>