MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/De_Snagging_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>De_Snagging_Appointment_Status__c</fullName>
    <formula>TEXT(De_Snagging_Appointment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>De-Snagging Appointment Status</label>
    <type>Text</type>
</CustomField>