MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/De_Snagging_Attendee_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>De_Snagging_Attendee_Emirates_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>De Snagging Attendee Emirates Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>