MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/De_Snagging_Attendee_Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>De_Snagging_Attendee_Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>De Snagging Attendee Joint Owner</label>
    <referenceTo>JointOwner__c</referenceTo>
    <relationshipLabel>Handover Details (De Snagging Attendee Joint Owner)</relationshipLabel>
    <relationshipName>Handover_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>