MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/De_Snagging_Attendee_POA_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>De_Snagging_Attendee_POA_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>De Snagging Attendee POA Email Address</label>
    <type>Email</type>
</CustomField>