MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Hand Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>