MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Docusign_sent_date__c.field-meta.xml
<CustomField>
    <fullName>Docusign_sent_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Docusign sent date</label>
    <type>Date</type>
</CustomField>