MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Electrical_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Meter_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electrical Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>