MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Expected_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Handover_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Handover Date</label>
    <type>Date</type>
</CustomField>