MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Finance_Billing__c.field-meta.xml
<CustomField>
    <fullName>Finance_Billing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Billing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>