MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/First_Year_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Service_Charge__c</fullName>
    <label>First Year Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>