MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_agent__c.field-meta.xml
<CustomField>
    <fullName>Handover_agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handover agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Handover_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>