MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Attended_By__c.field-meta.xml
<CustomField>
    <fullName>Handover_Attended_By__c</fullName>
    <label>Handover Attended By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Joint Owner</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Authorised Person</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>