MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Attendee_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Handover_Attendee_Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Attendee Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>