MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Attendee_POA_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Handover_Attendee_POA_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Attendee POA Email Address</label>
    <type>Email</type>
</CustomField>