MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Attendee_POA_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Handover_Attendee_POA_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Attendee POA Mobile Number</label>
    <type>Phone</type>
</CustomField>