MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Attendee_POA_Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>Handover_Attendee_POA_Resident_Status__c</fullName>
    <label>Handover Attendee POA Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>