MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Attendee_Trade_License__c.field-meta.xml
<CustomField>
    <fullName>Handover_Attendee_Trade_License__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Attendee Trade License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>