MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Authorized_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Handover_Authorized_Person_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Authorized Person Email</label>
    <type>Email</type>
</CustomField>