MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Completed__c.field-meta.xml
<CustomField>
    <fullName>Handover_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover Completed</label>
    <type>Checkbox</type>
</CustomField>