MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Payment_Type__c</fullName>
    <label>Handover Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Funds</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Subsidiary Mortgage</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>