MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Phase__c.field-meta.xml
<CustomField>
    <fullName>Handover_Phase__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>