MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Phase_Group__c.field-meta.xml
<CustomField>
    <fullName>Handover_Phase_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover Phase Group</label>
    <type>Checkbox</type>
</CustomField>