MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Phasing_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Phasing_Letter_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Phasing Letter Date</label>
    <type>Date</type>
</CustomField>