MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Property_Usage__c.field-meta.xml
<CustomField>
    <fullName>Handover_Property_Usage__c</fullName>
    <label>Handover Property Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>