MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Third_Party_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Handover_Third_Party_Engineer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Third Party Engineer Email</label>
    <type>Email</type>
</CustomField>