MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Handover_Third_Party_Engineer_Name__c.field-meta.xml
<CustomField>
    <fullName>Handover_Third_Party_Engineer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Handover Third Party Engineer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>