MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Hanover_Mortgage_Bank__c.field-meta.xml
<CustomField>
    <fullName>Hanover_Mortgage_Bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hanover Mortgage Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>