MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/Hanover_Type__c.field-meta.xml
<CustomField>
    <fullName>Hanover_Type__c</fullName>
    <label>Hanover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off Plan</fullName>
            </value>
            <value>
                <fullName>Ready Property</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>