MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/HO_Attendee_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>HO_Attendee_Emirates_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HO Attendee Emirates Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>