MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/HO_Attendee_Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>HO_Attendee_Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HO Attendee Joint Owner</label>
    <referenceTo>JointOwner__c</referenceTo>
    <relationshipLabel>Handover Details</relationshipLabel>
    <relationshipName>Handover_Details</relationshipName>
    <type>Lookup</type>
</CustomField>