MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/HO_Attendee_Third_Party_Engineer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>HO_Attendee_Third_Party_Engineer_Mobile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HO Attendee Third Party Engineer Mobile</label>
    <type>Phone</type>
</CustomField>