MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/HO_Authorized_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>HO_Authorized_Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HO Authorized Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>