MODON MRE BPDEV/force-app/main/default/objects/Handover_Details__c/fields/HO_Authorized_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>HO_Authorized_Person_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HO Authorized Person Phone</label>
    <type>Phone</type>
</CustomField>